[package]
name = "process_monitor_and_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["canvas", "tokio"] }
iced_widget = "0.12"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
cfg-if = "1.0"
bytesize = "1.3"
thiserror = "1"
anyhow = "1"
serde_json = "1"



[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "resource"] }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
"Win32_Foundation",
"Win32_System_Threading",
"Win32_System_ProcessStatus",
"Win32_System_Diagnostics_ToolHelp",
"Win32_System_SystemInformation"
] }