[package]
name = "process_monitor_and_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["canvas", "tokio"] }
iced_widget = "0.12"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
cfg-if = "1.0"
bytesize = "1.3"
thiserror = "1"
anyhow = "1"
serde_json = "1"



[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "resource"] }


# Windows dependencies (all Windows architectures including x64)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

# Additional x64 specific optimizations (optional)
[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
# Add any x64-specific dependencies here if needed